--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@types/*": ["./src/types/*"]
+    }
   },
   "include": ["src"]
 }
