--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "*.css": "npm run format:check"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.61.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tanstack/react-query-devtools": "^5.61.4",
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
