--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "lint:ts": "eslint .",
-    "format:check": "prettier --check . --ignore-path .prettierignore"
+    "format:check": "prettier --check . --ignore-path .prettierignore",
+    "generate-api-client": "npx openapi-typescript-codegen --input http://localhost:3000/swagger.json --output ./src/api-client"
   },
   "lint-staged": {
     "*.ts, *.tsx": [
